--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -13,11 +13,17 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-      - name: Set up JDK 17
+          
+      - name: set up JDK 11
         uses: actions/setup-java@v4
-        with:
-          java-version: 17
-          distribution: 'zulu' # Alternative distribution options are available
+          with:
+            java-version: '17'
+            distribution: 'temurin'
+            cache: gradle
+
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+      
       - name: Cache SonarQube packages
         uses: actions/cache@v4
         with:
