--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -2,12 +2,14 @@ name: Android CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
   pull_request:
     types: [ opened, synchronize, reopened ]
 
 jobs:
   build-project:
+    name: Build
     runs-on: ubuntu-latest
     steps:
       - name: Checkout to repository
@@ -24,7 +26,7 @@ jobs:
         run: chmod +x gradlew
 
       - name: Build app
-        run: ./gradlew build --debug
+        run: ./gradlew build
 
       - name: Test app
         run: ./gradlew tesDebug
