--- a/.github/workflows/auth_packaging.yml
+++ b/.github/workflows/auth_packaging.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Set up gradle
         uses: gradle/actions/setup-gradle@v4.4.1
 
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+
       - name: Publish package
         run: ./gradlew publish
         env:
